# clasificador_rust

./: .gitignore  Cargo.toml  README.md
src/: config.rs  excel.rs  file_utils.rs  main.rs  models.rs  state.rs  text_extraction.rs  zhipuai.rs
