[package]
name = "clasificador_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lopdf = "0.34"
docx-rs = "0.4"
calamine = "0.26"
zip = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
walkdir = "2.4"
thiserror = "1.0"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console"
]}

[profile.release]
strip = true
lto = true
codegen-units = 1
